--- a/notebooks/classification_baseline.ipynb
+++ b/notebooks/classification_baseline.ipynb
@@ -19,18 +19,8 @@
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import torch\n",
-    "\n",
     "from utils.fnSampling import get_random_sample_directory,get_processed_sample\n",
-    "# Setting pandas display option\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
-    "\n",
-    "print(f\"Num GPUs Available: {len(tf.config.list_physical_devices('GPU'))}\")\n",
-    "print(f\"Is cuda available: {torch.cuda.is_available()}\")\n",
-    "print(f\"Tensorflow: {tf.__version__}\")\n",
-    "\n",
-    "# Time stratified random sample of 1% of the 4chan dataset - used as unlabeled data\n",
-    "sampled_rows = get_random_sample_directory('data/datasets/TSRS/', 0.01)\n",
-    "# Custom training dataset created from a time stratified sample of 4chan dataset - used to train the classifer\n",
     "spam_dataset = pd.read_parquet('./data/datasets/baselines/4chan/spam_dataset.parquet')\n",
     "# Baseline training dataset - used to train the classifer\n",
     "SMS_dataset = pd.read_csv('./data/datasets/baselines/SMS/SMSSpamCollection_cleaned.csv')\n",
@@ -42,6 +32,7 @@
    "metadata": {},
    "source": [
     "### Baseline Model Development using Public Data\n",
+    "- https://www.kaggle.com/datasets/uciml/sms-spam-collection-dataset\n",
     "- https://www.kaggle.com/datasets/ozlerhakan/spam-or-not-spam-dataset"
    ]
   },
@@ -788,21 +779,22 @@
     "test_loss, test_acc = final_model.evaluate(test_data, test_labels, verbose=2)\n",
     "print('Test Loss:', test_loss)\n",
     "print('Test Accuracy:', test_acc)\n",
-    "\n",
     "# Sample predictions\n",
     "sample_data = test_data[:10]\n",
     "sample_labels = test_labels[:10]\n",
     "sample_predictions = final_model.predict(sample_data)\n",
-    "sample_predictions = (sample_predictions > 0.5).astype(int) # Thresholding\n",
+    "sample_predictions = (sample_predictions > 0.5).astype(int)\n",
     "print('Sample Labels:', sample_labels)\n",
-    "print('Sample Predictions:', sample_predictions)\n"
+    "print('Sample Predictions:', sample_predictions)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "UST looks to have increased model performance on the custom dataset. Specifically, the validation accuracy increased from 0.8644 to 0.8983"
+    "#### The model performance improves on the test set after UST, demonstrating two things:\n",
+    "1. The model can generize\n",
+    "2. UST is effective in improving the model performance"
    ]
   },
   {
@@ -816,18 +808,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
