updates to README and plots

--- a/notebooks/SPT.ipynb
+++ b/notebooks/SPT.ipynb
@@ -293,7 +293,7 @@
     "    sampled_data = data.sample(actual_sample_size)\n",
     "    params = {\n",
     "        'sample_size': [actual_sample_size],\n",
-    "        'similarity_threshold': [0.25,0.5,0.75,0.8]\n",
+    "        'similarity_threshold': [0.45,0.6,0.7,0.75,0.9]\n",
     "    }\n",
     "\n",
     "    results = fnTesting.grid_search(sampled_data, params)\n",
@@ -350,7 +350,7 @@
     "from srcs.labeler import DialogDetector, apply_detector\n",
     "\n",
     "# Perform clustering and visualize the results\n",
-    "spam_ratio, labeled_data, similarity_training_data, spam_detector = apply_detector(data, 0.7,len(data))\n",
+    "spam_ratio, labeled_data, similarity_training_data, spam_detector = apply_detector(data, optimal_threshold + 0.1, len(data))\n",
     "fig, cluster_spam_ratio, data_clustered = attention_filter.main_plotting(labeled_data, max_length=512, show_scatter=True)\n",
     "# Identify clusters with a specific spam ratio and filter the data for further classification\n",
     "cluster_ratios = cluster_spam_ratio[cluster_spam_ratio > 0.01].index.tolist()"
